--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
-asas
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Drawing Page</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap">
+    <style>
+        body {
+            background-color: #f0f0f0;
+            font-family: 'Shadows Into Light', cursive;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        #drawing-container {
+            border: 10px solid #333;
+            border-radius: 10px;
+            box-sizing: border-box;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+        }
+
+        #text-scratches {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+        }
+
+        #text-scratches::before {
+            content: "";
+            background-image: url('scratches.png'); /* Replace 'scratches.png' with your image */
+            opacity: 0.5;
+            pointer-events: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+    </style>
+</head>
+<body>
+    <div id="drawing-container">
+        <div id="text-scratches"></div>
+        <h1>Your Drawing Page</h1>
+        <!-- Add your drawing or content here -->
+    </div>
+</body>
+</html>
