--- a/endworld.html
+++ b/endworld.html
@@ -66,7 +66,7 @@
     <div id="endworld-container">
         <h1>End of everybody's life</h1>
         <p>Have you ever thought that all lives and the world will end on <strong id="currentDate"></strong>?</p>
-        <div class="next-button">
+        <div name="next-button" id="next-button"class="next-button">
             <a onclick="loadrealworldend()" class="arrow-right">&#8594;</a>
         </div>
     </div>
