--- a/realworldend.html
+++ b/realworldend.html
@@ -1,1 +1,43 @@
-WIP
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Real World End</title>
+    <style>
+        body {
+            background-color: #1a1a1a; /* Dark background color */
+            color: #ffffff; /* Light text color */
+            font-family: 'Courier New', monospace; /* Monospace font */
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        #countdown-container {
+            text-align: center;
+        }
+
+        h1 {
+            color: #ffcc00; /* Yellow text color */
+            font-size: 2em;
+        }
+
+        p {
+            font-size: 1.5em;
+            margin-bottom: 15px;
+        }
+    </style>
+</head>
+<body>
+    <script src="script.js"></script>
+    <div id="countdown-container">
+        <h1>The End is Near</h1>
+        <p>The world could end on September 21st, 2028</p>
+        <div id="countdown"></div>
+    </div>
+</body>
+</html>
